<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.glaukous.views.scanner.ScannerVM" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/itemsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardCycleCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardCornerRadius="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/card_bg"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/tvDate"
                        style="@style/HeadingTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvDateValue"
                        style="@style/NormalTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:text="@{viewModel.date}"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@id/tvDate"
                        app:layout_constraintStart_toEndOf="@id/tvDate"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvFloor"
                        style="@style/HeadingTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/floor"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDate" />

                    <TextView
                        android:id="@+id/tvFloorValue"
                        style="@style/NormalTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:text="@{viewModel.floor}"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@id/tvFloor"
                        app:layout_constraintStart_toEndOf="@id/tvFloor"
                        app:layout_constraintTop_toTopOf="@id/tvFloor" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/scanLayout"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/ic_border"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardCycleCount">

                <androidx.camera.view.PreviewView
                    android:id="@+id/preview_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </RelativeLayout>

            <TextView
                android:id="@+id/tvScanItem"
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/scan_item_code"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scanLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>